@@ -4,7 +4,7 @@ Description: AyaPortfolio is fully Responsive Portfolio WordPress Theme. Feature
 Author: ayatemplates
 Author URI: https://ayatemplates.com
 Theme URI: https://ayatemplates.com/product/ayaportfolio
-Version: 1.0.0
+Version: 1.0.1
 Text Domain: ayaportfolio
 Tags: blog, entertainment, two-columns, right-sidebar, custom-logo, custom-background, custom-header, custom-menu, featured-images, threaded-comments, translation-ready, sticky-post, theme-options, footer-widgets
 License: GNU General Public License v2.0
@@ -54,19 +54,19 @@ a img{
 }
 
 p {
-	padding:3px 0 3px 0;
+	padding:5px 0 5px 0;
 	margin:0;
 }
 
 img {
 	border:0;
 	outline:0;
+	max-width:100%;
+	height:auto;
 }
 
 #main-content-wrapper img,
 #footer-main img {
-	max-width:100%;
-	height:auto;
 	-webkit-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.3);
 	-moz-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.3);
 	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.3);
@@ -80,13 +80,14 @@ img {
 	opacity:0.7;
 }
 
-h1, h2, h3, h4, h5, h6{
+h1, h2, h3, h4, h5, h6, .entry-title {
 	font-weight:400;
 	margin:0;
 	color:#333333; 
 }
 	
-h1 {
+h1,
+.entry-title {
 	font-size:32px;
 	padding:10px 0 3px 0;
 }
@@ -222,11 +223,13 @@ dd {
 /* header */
 #header-main-fixed {
 	clear:both;
-	background-color:#ffffff; 
 	margin:0;
 	width:100%;
 	z-index:5000;
 	color:#000000;
+	padding-bottom:0;
+	top:0;
+	min-height:50px;
 }
 
 #header-main-fixed a h1,
@@ -321,7 +324,8 @@ article,
 	padding:5px 0 0 0;
 }
 
-#main-content > article:first-of-type h1 {
+#main-content > article:first-of-type h1,
+#main-content > article:first-of-type .entry-title {
 	margin-top:0;
 	padding-top:0;
 }
@@ -390,6 +394,7 @@ article ul > li:before {
 	display:inline-block;
 	text-align:center;
 	margin:0 7px 7px 0;
+	font-size:12px;
 }
 
 article,
@@ -1304,6 +1309,10 @@ dt.gallery-icon > a:before,
 		width:63%;
 	}
 
+	.custom-logo-link img {
+	    max-width: 100px;
+	}
+
 	#sidebar {
 		float:left;
 		margin:10px 2% 30px 2%;
@@ -1611,8 +1620,13 @@ dt.gallery-icon > a:before,
 /* Medium Resolution */
 @media screen and (max-width: 799px) {
 
-	h1 {
+	h1,
+	.entry-title {
 		font-size:1.5em;
+	}
+
+	.custom-logo-link img {
+	    max-width: 70px;
 	}
 	
 	.search-form-icon {
@@ -1628,11 +1642,6 @@ dt.gallery-icon > a:before,
 	
 	.search-form-icon:hover {
 		text-decoration:none !important;
-	}
-
-	#header-main-fixed {
-		padding-bottom:0;
-		top:0;
 	}
 
 	#main-content {
@@ -1704,6 +1713,10 @@ dt.gallery-icon > a:before,
 		float:left;
 		clear:both;
 		width:100%;
+	}
+
+	#navmain ul ul a {
+		padding-left:25px;
 	}
 	
 	#navmain ul a {
@@ -1852,6 +1865,10 @@ dt.gallery-icon > a:before,
 		margin-top:1px !important;
 	}
 
+	.custom-logo-link img {
+	    max-width: 50px;
+	}
+
 	.separator {
 		height:1px;
 	}
@@ -1978,7 +1995,8 @@ dt.gallery-icon > a:before,
 	#respond,
 	.navigation,
 	.edit-icon,
-	a.comment-edit-link {
+	a.comment-edit-link,
+	.scrollup {
 		display:none !important;
 	}
 }
